--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "react-native-media-controller": "^1.0.5",
+    "react-native-media-controls": "^2.3.0",
+    "react-native-slider": "^0.11.0",
+    "react-native-video": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
